--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "autoprefixer": "^9.7.3",
     "babel-loader": "^8.0.6",
     "babel-plugin-transform-inline-environment-variables": "^0.4.3",
+    "babel-polyfill": "^6.26.0",
     "css-loader": "^3.3.0",
     "eslint": "^6.3.0",
     "html-inline-css-webpack-plugin": "^1.8.0",
